# src/Clientes/Contract/ListarClientesResponse.php
@@ -4,32 +4,14 @@ declare(strict_types=1);
 
 namespace App\Clientes\Contract;
 
-use App\Clientes\Model\ClienteModel;
 use App\Core\Contract\AbstractContract;
-use JsonSerializable;
-use Override;
+use OpenApi\Attributes as OA;
 
-readonly class ListarClientesResponse extends AbstractContract implements JsonSerializable {
+#[OA\Schema]
+readonly class ListarClientesResponse extends AbstractContract {
+    public function __construct(
+        #[OA\Property(type: 'array', items: new OA\Items(ref: '#/components/schemas/ClienteResponse'))]
+        public array $clientes
+    ) {}
 
-	/** @param ClienteModel[] */
-	public function __construct(
-		public array $clientes
-	) {
-	}
-
-	public function jsonSerialize(): mixed
-	{
-		return [
-			"clientes" => array_map(function (ClienteModel $cliente) {
-				return [
-					"id" => $cliente->getId(),
-					"nome" => $cliente->getNome(),
-					"cpf_cnpj" => $cliente->getCpfCnpj()->getMaskedValue(),
-					"email" => $cliente->getEmail()->getMaskedValue(),
-					"telefone" => $cliente->getTelefone()->getMaskedValue(),
-				];
-			}, $this->clientes)
-		];
-	}
-    
 }
