# src/router.php
@@ -6,7 +6,6 @@ use App\Core\BaseController;
 use App\Core\Config\AppConfig;
 use App\Core\ServiceContainerBuilder;
 use Slim\Routing\RouteCollectorProxy;
-use App\Clientes\Controller as ClientesController;
 
 $containerBuilder = new ServiceContainerBuilder();
 $container = $containerBuilder->build();
@@ -26,10 +25,10 @@ $app->get('/', [BaseController::class, "index"]);
 $app->get('/health', [BaseController::class, "health"]);
 
 $app->group("/clientes", function (RouteCollectorProxy $group): void {
-    $group->get("/", [ClientesController::class, "listarClientes"]);
-    $group->post("/", [ClientesController::class, "criarCliente"]);
-    $group->get("/{id:[0-9]+}", [ClientesController::class, "obterCliente"]);
-    $group->patch("/{id:[0-9]+}", [ClientesController::class, "editarCliente"]);
+    $group->get("/", App\Clientes\Controller\ListarClientesController::class);
+    $group->post("/", App\Clientes\Controller\CriarClienteController::class);
+    $group->get("/{id:[0-9]+}", App\Clientes\Controller\ObterClienteController::class);
+    $group->patch("/{id:[0-9]+}", App\Clientes\Controller\EditarClienteController::class);
 });
 
 $app->run();
